feat: Dashboard Teacher/Organizations Login (#164)
* rm shared

* ref SQU-90 info organization endpoints

* ref SQU-90 finished dashboard login
